[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tethysapp-flowforge"
description =  "Visual Pipeline Studio for NextGen in a Box"
readme = "README.md"
license = {text = "MIT"}
keywords = ["CIROH",  "NGIAB"]
authors = [
    {name = "Elkin Romero", email = "gromero@aquaveo.com"},
]
dependencies = [
    "hera",
    "duckdb",
    "geopandas",
    "xarray",
    "netcdf4>=1.7.2",
    "numpy<2",
    "botocore",
    "boto3",
    "pyiceberg",
    "pyarrow",
]

classifiers = [
     "Environment :: Web Environment",
     "Framework :: Django",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Topic :: Internet :: WWW/HTTP",
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = ["version"]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tethysapp*"]

[tool.setuptools.package-data]
"*" = [
    "*.js",
    "*.png",
    "*.gif",
    "*.jpg",
    "*.html",
    "*.css",
    "*.gltf",
    "*.json",
    "*.svg",
]
